# dndice_gui

./: pyproject.toml
dndice/: gui.py
dndice_gui/: gui.py
docs/: gui.rst  index.rst
tests/: test_gui.py
