[tool.poetry]
name = "dndice_gui"
version = "1.0.0"
description = "A gui for my other repository, dndice, which provides a library for evaluating dice expressions."
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
pyqt5 = "^5.13"
pyqt5-stubs = "^5.13"
dndice = "^2.4"

[tool.poetry.dev-dependencies]
nose2 = "^0.9.1"
sphinx = "^2.1"
sphinx-rtd-theme = "^0.4.3"

[tool.poetry.scripts]
dndice = "dndice_gui:gui.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
